Cell Black Sprite
Added a black cell sprite.

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+RetroKings/Assets/.DS_Store
+RetroKings/Assets/MY SPRITES/.DS_Store
