--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ crashlytics-build.properties
 
 RetroKings/Assets/.DS_Store
 RetroKings/Assets/MY SPRITES/.DS_Store
+RetroKings/Assets/MY SPRITES/Chess Pieces/.DS_Store
