--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ crashlytics-build.properties
 RetroKings/Assets/.DS_Store
 RetroKings/Assets/MY SPRITES/.DS_Store
 RetroKings/Assets/MY SPRITES/Chess Pieces/.DS_Store
+.DS_Store
